--- a/templates/panel_adminlogs.html
+++ b/templates/panel_adminlogs.html
@@ -6,7 +6,7 @@
 	<div class="rowitem panel_compactrow">
 		<span class="to_left">
 			<span>{{.Action}}</span>
-			{{if $.CurrentUser.Perms.ViewIPs}}<br /><small title="{{.IPAddress}}">{{.IPAddress}}</small>{{end}}
+			{{if $.CurrentUser.Perms.ViewIPs}}<br /><small title="{{.IP}}">{{.IP}}</small>{{end}}
 		</span>
 		<span class="to_right">
 			<span title="{{.DoneAt}}">{{.DoneAt}}</span>
