--- a/templates/panel_pages.html
+++ b/templates/panel_pages.html
@@ -7,7 +7,7 @@
 		<a href="/panel/pages/edit/{{.ID}}" class="panel_upshift">{{.Title}}</a>&nbsp;<a href="/pages/{{.Name}}">[{{.Name}}]</a>
 		<span class="panel_buttons">
 			<a href="/panel/pages/edit/{{.ID}}" class="panel_tag panel_right_button edit_button" aria-label="{{lang "panel_pages_edit_button_aria"}}"></a>
-			<a href="/panel/pages/delete/submit/{{.ID}}?session={{$.CurrentUser.Session}}" class="panel_tag panel_right_button delete_button" aria-label="{{lang "panel_pages_delete_button_aria"}}"></a>
+			<a href="/panel/pages/delete/submit/{{.ID}}?s={{$.CurrentUser.Session}}" class="panel_tag panel_right_button delete_button" aria-label="{{lang "panel_pages_delete_button_aria"}}"></a>
 		</span>
 	</div>
 	{{else}}
@@ -21,7 +21,7 @@
 	<div class="rowitem"><h1>{{lang "panel_pages_create_head"}}</h1></div>
 </div>
 <div class="colstack_item the_form">
-	<form action="/panel/pages/create/submit/?session={{.CurrentUser.Session}}" method="post">
+	<form action="/panel/pages/create/submit/?s={{.CurrentUser.Session}}" method="post">
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_pages_create_name"}}</a></div>
 			<div class="formitem"><input name="name" type="text" placeholder="{{lang "panel_pages_create_name_placeholder"}}" /></div>
