--- a/templates/panel_pages_edit.html
+++ b/templates/panel_pages_edit.html
@@ -1,23 +1,23 @@
-	<div class="colstack_item colstack_head">
-		<div class="rowitem"><h1>{{lang "panel_pages_edit_head"}}</h1></div>
-	</div>
-	<form action="/panel/pages/edit/submit/{{.Page.ID}}?session={{.CurrentUser.Session}}" method="post">
-		<div id="panel_page_edit_item" class="colstack_item the_form">
-			<div class="formrow">
-				<div class="formitem formlabel"><a>{{lang "panel_pages_name"}}</a></div>
-				<div class="formitem"><input name="name" type="text" value="{{.Page.Name}}" /></div>
-			</div>
-			<div class="formrow">
-				<div class="formitem formlabel"><a>{{lang "panel_pages_title"}}</a></div>
-				<div class="formitem"><input name="title" type="text" value="{{.Page.Title}}" /></div>
-			</div>
-			<div class="formrow">
-				<div class="formitem">
-					<textarea name="body">{{.Page.Body}}</textarea>
-				</div>
-			</div>
-			<div class="formrow">
-				<div class="formitem"><button name="panel-button" class="formbutton">{{lang "panel_pages_edit_update_button"}}</button></div>
+<div class="colstack_item colstack_head">
+	<div class="rowitem"><h1>{{lang "panel_pages_edit_head"}}</h1></div>
+</div>
+<form action="/panel/pages/edit/submit/{{.Page.ID}}?s={{.CurrentUser.Session}}" method="post">
+	<div id="panel_page_edit_item" class="colstack_item the_form">
+		<div class="formrow">
+			<div class="formitem formlabel"><a>{{lang "panel_pages_name"}}</a></div>
+			<div class="formitem"><input name="name" type="text" value="{{.Page.Name}}" /></div>
+		</div>
+		<div class="formrow">
+			<div class="formitem formlabel"><a>{{lang "panel_pages_title"}}</a></div>
+			<div class="formitem"><input name="title" type="text" value="{{.Page.Title}}" /></div>
+		</div>
+		<div class="formrow">
+			<div class="formitem">
+				<textarea name="body">{{.Page.Body}}</textarea>
 			</div>
 		</div>
-	</form>
+		<div class="formrow">
+			<div class="formitem"><button name="panel-button" class="formbutton">{{lang "panel_pages_edit_update_button"}}</button></div>
+		</div>
+	</div>
+</form>
