--- a/templates/panel_setting.html
+++ b/templates/panel_setting.html
@@ -1,37 +1,37 @@
-	<div class="colstack_item colstack_head">
-		<div class="rowitem"><h1>{{.Setting.FriendlyName}}</h1></div>
-	</div>
-	<div id="panel_setting" class="colstack_item the_form">
-		<form action="/panel/settings/edit/submit/{{.Setting.Name}}?session={{.CurrentUser.Session}}" method="post">
-			{{if eq .Setting.Type "list"}}
-			<div class="formrow">
-				<div class="formitem formlabel"><a>{{lang "panel_setting_value"}}</a></div>
-				<div class="formitem">
-					<select name="setting-value">
-					{{range .ItemList}}<option{{if .Selected}} selected{{end}} value="{{.Value}}">{{.Label}}</option>{{end}}
-					</select>
-				</div>
+<div class="colstack_item colstack_head">
+	<div class="rowitem"><h1>{{.Setting.FriendlyName}}</h1></div>
+</div>
+<div id="panel_setting" class="colstack_item the_form">
+	<form action="/panel/settings/edit/submit/{{.Setting.Name}}?s={{.CurrentUser.Session}}" method="post">
+		{{if eq .Setting.Type "list"}}
+		<div class="formrow">
+			<div class="formitem formlabel"><a>{{lang "panel_setting_value"}}</a></div>
+			<div class="formitem">
+				<select name="setting-value">
+				{{range .ItemList}}<option{{if .Selected}} selected{{end}} value="{{.Value}}">{{.Label}}</option>{{end}}
+				</select>
 			</div>
-			{{else if eq .Setting.Type "bool"}}
-			<div class="formrow">
-				<div class="formitem formlabel"><a>{{lang "panel_setting_value"}}</a></div>
-				<div class="formitem">
-					<select name="setting-value">
-						<option{{if eq .Setting.Content "1"}} selected{{end}} value="1">{{lang "option_yes"}}</option>
-						<option{{if eq .Setting.Content "0"}} selected{{end}} value="0">{{lang "option_no"}}</option>
-					</select>
-				</div>
+		</div>
+		{{else if eq .Setting.Type "bool"}}
+		<div class="formrow">
+			<div class="formitem formlabel"><a>{{lang "panel_setting_value"}}</a></div>
+			<div class="formitem">
+				<select name="setting-value">
+					<option{{if eq .Setting.Content "1"}} selected{{end}} value="1">{{lang "option_yes"}}</option>
+					<option{{if eq .Setting.Content "0"}} selected{{end}} value="0">{{lang "option_no"}}</option>
+				</select>
 			</div>
-			{{else if eq .Setting.Type "textarea"}}
-			<div class="formrow">
-				<div class="formitem"><textarea name="setting-value">{{.Setting.Content}}</textarea></div>
-			</div>
-			{{else}}<div class="formrow">
-				<div class="formitem formlabel"><a>{{lang "panel_setting_value"}}</a></div>
-				<div class="formitem"><input name="setting-value" type="text" value="{{.Setting.Content}}" /></div>
-			</div>{{end}}
-			<div class="formrow form_button_row">
-				<div class="formitem"><button name="panel-button" class="formbutton">{{lang "panel_setting_update_button"}}</button></div>
-			</div>
-		</form>
-	</div>
+		</div>
+		{{else if eq .Setting.Type "textarea"}}
+		<div class="formrow">
+			<div class="formitem"><textarea name="setting-value">{{.Setting.Content}}</textarea></div>
+		</div>
+		{{else}}<div class="formrow">
+			<div class="formitem formlabel"><a>{{lang "panel_setting_value"}}</a></div>
+			<div class="formitem"><input name="setting-value" type="text" value="{{.Setting.Content}}" /></div>
+		</div>{{end}}
+		<div class="formrow form_button_row">
+			<div class="formitem"><button name="panel-button" class="formbutton">{{lang "panel_setting_update_button"}}</button></div>
+		</div>
+	</form>
+</div>
