--- a/templates/panel_word_filters.html
+++ b/templates/panel_word_filters.html
@@ -1,40 +1,40 @@
-	<div class="colstack_item colstack_head">
-		<div class="rowitem"><h1>{{lang "panel_word_filters_head"}}</h1></div>
+<div class="colstack_item colstack_head">
+	<div class="rowitem"><h1>{{lang "panel_word_filters_head"}}</h1></div>
+</div>
+<div id="panel_word_filters" class="colstack_item rowlist micro_grid">
+	{{range .Something}}
+	<div class="rowitem panel_compactrow editable_parent">
+		<a data-field="find" data-type="text" href="/panel/settings/word-filters/edit/{{.ID}}" class="editable_block panel_upshift edit_fields filter_find">{{.Find}}</a>
+		<span class="itemSeparator"></span>
+		<a data-field="replacement" data-type="text" class="editable_block panel_compacttext filter_replace">{{.Replacement}}</a>
+		<span class="panel_buttons">
+			<a class="panel_tag edit_fields hide_on_edit panel_right_button edit_button" aria-label="{{lang "panel_word_filters_edit_button_aria"}}"></a>
+			<a class="panel_right_button show_on_edit" href="/panel/settings/word-filters/edit/submit/{{.ID}}"><button class='panel_tag submit_edit' type='submit'>{{lang "panel_word_filters_update_button"}}</button></a>
+			<a href="/panel/settings/word-filters/delete/submit/{{.ID}}?s={{$.CurrentUser.Session}}" class="panel_tag panel_right_button hide_on_edit delete_button" aria-label="{{lang "panel_word_filters_delete_button_aria"}}"></a>
+		</span>
 	</div>
-	<div id="panel_word_filters" class="colstack_item rowlist micro_grid">
-		{{range .Something}}
-		<div class="rowitem panel_compactrow editable_parent">
-			<a data-field="find" data-type="text" href="/panel/settings/word-filters/edit/{{.ID}}" class="editable_block panel_upshift edit_fields filter_find">{{.Find}}</a>
-			<span class="itemSeparator"></span>
-			<a data-field="replacement" data-type="text" class="editable_block panel_compacttext filter_replace">{{.Replacement}}</a>
-			<span class="panel_buttons">
-				<a class="panel_tag edit_fields hide_on_edit panel_right_button edit_button" aria-label="{{lang "panel_word_filters_edit_button_aria"}}"></a>
-				<a class="panel_right_button show_on_edit" href="/panel/settings/word-filters/edit/submit/{{.ID}}"><button class='panel_tag submit_edit' type='submit'>{{lang "panel_word_filters_update_button"}}</button></a>
-				<a href="/panel/settings/word-filters/delete/submit/{{.ID}}?session={{$.CurrentUser.Session}}" class="panel_tag panel_right_button hide_on_edit delete_button" aria-label="{{lang "panel_word_filters_delete_button_aria"}}"></a>
-			</span>
-		</div>
-		{{else}}
-		<div class="rowitem rowmsg">
-			<a>{{lang "panel_word_filters_no_filters"}}</a>
-		</div>
-		{{end}}
+	{{else}}
+	<div class="rowitem rowmsg">
+		<a>{{lang "panel_word_filters_no_filters"}}</a>
 	</div>
+	{{end}}
+</div>
 
-	<div class="colstack_item colstack_head">
-		<div class="rowitem"><h1>{{lang "panel_word_filters_create_head"}}</h1></div>
-	</div>
-	<div class="colstack_item the_form">
-		<form action="/panel/settings/word-filters/create/?session={{.CurrentUser.Session}}" method="post">
-			<div class="formrow">
-				<div class="formitem formlabel"><a>{{lang "panel_word_filters_create_find"}}</a></div>
-				<div class="formitem"><input name="find" type="text" placeholder="{{lang "panel_word_filters_create_find_placeholder"}}" /></div>
-			</div>
-			<div class="formrow">
-				<div class="formitem formlabel"><a>{{lang "panel_word_filters_create_replacement"}}</a></div>
-				<div class="formitem"><input name="replacement" type="text" placeholder="{{lang "panel_word_filters_create_replacement_placeholder"}}" /></div>
-			</div>
-			<div class="formrow">
-				<div class="formitem"><button name="panel-button" class="formbutton form_middle_button">{{lang "panel_word_filters_create_create_word_filter_button"}}</button></div>
-			</div>
-		</form>
-	</div>
+<div class="colstack_item colstack_head">
+	<div class="rowitem"><h1>{{lang "panel_word_filters_create_head"}}</h1></div>
+</div>
+<div class="colstack_item the_form">
+	<form action="/panel/settings/word-filters/create/?s={{.CurrentUser.Session}}" method="post">
+		<div class="formrow">
+			<div class="formitem formlabel"><a>{{lang "panel_word_filters_create_find"}}</a></div>
+			<div class="formitem"><input name="find" type="text" placeholder="{{lang "panel_word_filters_create_find_placeholder"}}" /></div>
+		</div>
+		<div class="formrow">
+			<div class="formitem formlabel"><a>{{lang "panel_word_filters_create_replacement"}}</a></div>
+			<div class="formitem"><input name="replacement" type="text" placeholder="{{lang "panel_word_filters_create_replacement_placeholder"}}" /></div>
+		</div>
+		<div class="formrow">
+			<div class="formitem"><button name="panel-button" class="formbutton form_middle_button">{{lang "panel_word_filters_create_create_word_filter_button"}}</button></div>
+		</div>
+	</form>
+</div>
