Fix the resources not being invalidated properly. Tweak the convo list styling.

--- a/templates/convos.html
+++ b/templates/convos.html
@@ -4,7 +4,7 @@
 		{{if not .CurrentUser.IsBanned}}<h2><a href="/user/convos/create/">Create Convo</a></h2>{{end}}
 	</div>
 </div>
-<div class="colstack_item">
+<div class="colstack_item convos_list">
 	{{range .Convos}}
 	<div class="rowitem">
 		<span class="to_left">
