--- a/templates/forum.html
+++ b/templates/forum.html
@@ -10,25 +10,25 @@
 			<h1 itemprop="name">{{.Title}}</h1>
 		</div>
 		{{if .CurrentUser.Loggedin}}
-			<div class="optbox">
-				{{if .CurrentUser.Perms.CreateTopic}}
-				<div class="opt dummy_opt"></div>
-				<div class="pre_opt auto_hide"></div>
-				<div class="opt create_topic_opt" title="{{lang "topic_list.create_topic_tooltip"}}" aria-label="{{lang "topic_list.create_topic_aria"}}"><a class="create_topic_link" href="/topics/create/{{.Forum.ID}}"></a></div>
-				{{/** TODO: Add a permissions check for this **/}}
-				<div class="opt mod_opt" title="{{lang "topic_list.moderate_tooltip"}}">
-					<a class="moderate_link" href="#" aria-label="{{lang "topic_list.moderate_aria"}}"></a>
-				</div>
-				{{else}}<div class="opt locked_opt" title="{{lang "forum_locked_tooltip"}}" aria-label="{{lang "forum_locked_aria"}}"><a></a></div>{{end}}
+		<div class="optbox">
+			{{if .CurrentUser.Perms.CreateTopic}}
+			<div class="opt dummy_opt"></div>
+			<div class="pre_opt auto_hide"></div>
+			<div class="opt create_topic_opt" title="{{lang "topic_list.create_topic_tooltip"}}" aria-label="{{lang "topic_list.create_topic_aria"}}"><a class="create_topic_link" href="/topics/create/{{.Forum.ID}}"></a></div>
+			{{/** TODO: Add a permissions check for this **/}}
+			<div class="opt mod_opt" title="{{lang "topic_list.moderate_tooltip"}}">
+				<a class="moderate_link" href="#" aria-label="{{lang "topic_list.moderate_aria"}}"></a>
 			</div>
-			<div style="clear:both;"></div>
-		{{end}}
+			{{else}}<div class="opt locked_opt" title="{{lang "forum_locked_tooltip"}}" aria-label="{{lang "forum_locked_aria"}}"><a></a></div>{{end}}
+		</div>
+		<div style="clear:both;"></div>
+	{{end}}
 	</div>
 	{{if .CurrentUser.Loggedin}}
 	{{template "topics_mod_floater.html"}}
 	
 	{{if .CurrentUser.Perms.CreateTopic}}
-	<div id="forum_topic_create_form" class="rowblock topic_create_form quick_create_form" style="display:none;" aria-label="{{lang "quick_topic.aria"}}">
+	<div id="forum_topic_create_form" class="rowblock topic_create_form quick_create_form auto_hide" aria-label="{{lang "quick_topic.aria"}}">
 		<form id="quick_post_form" enctype="multipart/form-data" action="/topic/create/submit/?s={{.CurrentUser.Session}}" method="post"></form>
 		<img class="little_row_avatar" src="{{.CurrentUser.MicroAvatar}}" height=64 alt="{{lang "quick_topic.avatar_alt"}}" title="{{lang "quick_topic.avatar_tooltip"}}" />
 		<input form="quick_post_form" id="topic_board_input" name="topic-board" value="{{.Forum.ID}}" type="hidden">
