--- a/templates/convos.html
+++ b/templates/convos.html
@@ -1,14 +1,14 @@
 <div class="colstack_item colstack_head rowhead">
 	<div class="rowitem">
 		<h1>{{lang "convos_head"}}</h1>
-		{{if not .CurrentUser.IsBanned}}<h2><a class="create_convo_link" href="/user/convos/create/">Create Convo</a></h2>{{end}}
+		{{if not .CurrentUser.IsBanned}}<h2><a class="create_convo_link" href="/user/convos/create/">{{lang "convos_create"}}</a></h2>{{end}}
 	</div>
 </div>
 {{if not .CurrentUser.IsBanned}}
 <div class="colstack_item the_form convo_create_form auto_hide">
 	<form action="/user/convos/create/submit/?s={{.CurrentUser.Session}}" method="post">
 		<div class="formrow real_first_child">
-			<div class="formitem formlabel"><a>Recipient/s</a></div>
+			<div class="formitem formlabel"><a>{{lang "create_convo_recp"}}</a></div>
 			<div class="formitem"><input name="recp" type="text" /></div>
 		</div>
 		<div class="formrow">
@@ -16,14 +16,14 @@
 		</div>
 		<div class="formrow">
 			<div class="formitem">
-				<button name="panel-button" class="formbutton form_middle_button">{{lang "create_convo_button"}}</button>
+				<button name="panel-button" class="formbutton">{{lang "create_convo_button"}}</button>
 				<button class="formbutton close_form">{{lang "quick_topic.cancel_button"}}</button>
 			</div>
 		</div>
 	</form>
 </div>
 {{end}}
-<div class="colstack_item convos_list">
+<div class="colstack_item convos_list rowlist">
 	{{range .Convos}}
 	<div class="rowitem">
 		<span class="to_left">
