Basic group promotions. Add the users_groups_promotions table. Optimise ConvoViewPage.
Shortened some things.
Convo CSS fixes.
Make sure the user cache is flushed properly after the post stats change.

You will need to run the patcher / updater for this commit.

--- a/templates/topics_quick_topic.html
+++ b/templates/topics_quick_topic.html
@@ -1,4 +1,4 @@
-<input form="quick_post_form" id="has_poll_input" name="has_poll" value="0" type="hidden" />
+<input form="quick_post_form" id="has_poll_input" name="has_poll" value=0 type="hidden" />
 <div class="formrow topic_content_row">
 	<div class="formitem">
 		<textarea form="quick_post_form" id="input_content" name="topic-content" placeholder="{{lang "quick_topic.content_placeholder"}}" required></textarea>
