--- a/themes/tempra_simple/public/convo.css
+++ b/themes/tempra_simple/public/convo.css
@@ -1,3 +1,22 @@
 .convos_item_user:not(:last-child):after {
 	content: ",";
 }
+.to_left:after {
+	clear: both;
+}
+
+/*.parti {
+	margin-bottom: 8px;
+}*/
+.parti .rowitem {
+	display: flex;
+}
+.parti_user:not(:last-child):after {
+	content: ",";
+}
+
+.convo_row_box .rowitem {
+	background-repeat: no-repeat, repeat-y;
+	background-size: 128px;
+	padding-left: 136px;
+}
