Tighten validation on group promotion delete. Shorten some variable names. Reduce the amount of duplication in the panel group routes. Rename isJs to js here and there. Localise group promotions.
Phrases:

Rename create_topic_create_topic_button to create_topic_create_button
Rename quick_topic.create_topic_button to quick_topic.create_button
Rename quick_topic.create_topic_button_short to quick_topic.create_button_short
Rename panel_groups_create_create_group_button to panel_groups_create_button
Rename panel_word_filters_create_create_word_filter_button to panel_word_filters_create_button
Rename panel_pages_create_submit_button to panel_pages_create_button
Add panel_group_promotions_create_head
Add panel_group_promotions_from
Add panel_group_promotions_to
Add panel_group_promotions_two_way
Add panel_group_promotions_level
Add panel_group_promotions_create_button

--- a/templates/topics_quick_topic.html
+++ b/templates/topics_quick_topic.html
@@ -15,7 +15,7 @@
 </div>
 <div class="formrow quick_button_row">
 	<div class="formitem">
-		<button form="quick_post_form" class="formbutton">{{lang "quick_topic.create_topic_button"}}</button>
+		<button form="quick_post_form" class="formbutton">{{lang "quick_topic.create_button"}}</button>
 		<button form="quick_post_form" class="formbutton" id="add_poll_button">{{lang "quick_topic.add_poll_button"}}</button>
 		{{if .CurrentUser.Perms.UploadFiles}}
 		<input name="upload_files" form="quick_post_form" id="upload_files" multiple type="file" class="auto_hide" />
