--- a/templates/panel_group_edit_promotions.html
+++ b/templates/panel_group_edit_promotions.html
@@ -24,12 +24,12 @@
 
 {{if .CurrentUser.Perms.EditGroup}}
 <div class="colstack_item colstack_head">
-	<div class="rowitem"><h1>Add Promotion</h1></div>
+	<div class="rowitem"><h1>{{lang "panel_group_promotions_create_head"}}</h1></div>
 </div>
 <div class="colstack_item the_form">
 	<form action="/panel/groups/promotions/create/submit/{{.ID}}?s={{.CurrentUser.Session}}" method="post">
 		<div class="formrow">
-			<div class="formitem formlabel"><a>From</a></div>
+			<div class="formitem formlabel"><a>{{lang "panel_group_promotions_from"}}</a></div>
 			<div class="formitem">
 				<select name="from">
 				{{range .Groups}}<option value="{{.ID}}">{{.Name}}</option>{{end}}
@@ -37,7 +37,7 @@
 			</div>
 		</div>
 		<div class="formrow">
-			<div class="formitem formlabel"><a>To</a></div>
+			<div class="formitem formlabel"><a>{{lang "panel_group_promotions_to"}}</a></div>
 			<div class="formitem">
 				<select name="to">
 				{{range .Groups}}<option value="{{.ID}}">{{.Name}}</option>{{end}}
@@ -45,7 +45,7 @@
 			</div>
 		</div>
 		<div class="formrow">
-			<div class="formitem formlabel"><a>Two Way</a></div>
+			<div class="formitem formlabel"><a>{{lang "panel_group_promotions_two_way"}}</a></div>
 			<div class="formitem">
 				<select name="two-way" disabled>
 					<option value=1>{{lang "option_yes"}}</option>
@@ -54,11 +54,11 @@
 			</div>
 		</div>
 		<div class="formrow">
-			<div class="formitem formlabel"><a>Level</a></div>
+			<div class="formitem formlabel"><a>{{lang "panel_group_promotions_level"}}</a></div>
 			<div class="formitem"><input name="level" type="number" value=0 /></div>
 		</div>
 		<div class="formrow form_button_row">
-			<div class="formitem"><button name="panel-button" class="formbutton">{{lang "panel_groups_create_create_group_button"}}</button></div>
+			<div class="formitem"><button name="panel-button" class="formbutton">{{lang "panel_group_promotions_create_button"}}</button></div>
 		</div>
 	</form>
 </div>
