Missed a spot. Push more session parameter shortenings. Remove some unneccesary indentations.

--- a/templates/are_you_sure.html
+++ b/templates/are_you_sure.html
@@ -5,7 +5,7 @@
 	</div>
 	<div class="rowblock">
 		<div class="rowitem passive rowmsg">{{.Something.Message}}<br /><br />
-			<a class="username" href="{{.Something.URL}}?session={{.CurrentUser.Session}}">{{lang "areyousure_continue"}}</a>
+			<a class="username" href="{{.Something.URL}}?s={{.CurrentUser.Session}}">{{lang "areyousure_continue"}}</a>
 		</div>
 	</div>
 </main>
