--- a/templates/panel_are_you_sure.html
+++ b/templates/panel_are_you_sure.html
@@ -8,7 +8,7 @@
 		</div>
 		<div class="colstack_item">
 			<div class="rowitem passive rowmsg">{{.Something.Message}}<br /><br />
-				<a class="username" href="{{.Something.URL}}?session={{.CurrentUser.Session}}">{{lang "areyousure_continue"}}</a>
+				<a class="username" href="{{.Something.URL}}?s={{.CurrentUser.Session}}">{{lang "areyousure_continue"}}</a>
 			</div>
 		</div>
 	</main>
