--- a/templates/panel_forums.html
+++ b/templates/panel_forums.html
@@ -1,69 +1,69 @@
-	<div class="colstack_item colstack_head">
-		<div class="rowitem">
-			<h1>{{lang "panel.forums_head"}}</h1>
-			<h2 class="hguide">{{lang "panel_hints_reorder"}}</h2>
-		</div>
+<div class="colstack_item colstack_head">
+	<div class="rowitem">
+		<h1>{{lang "panel.forums_head"}}</h1>
+		<h2 class="hguide">{{lang "panel_hints_reorder"}}</h2>
 	</div>
-	<div id="panel_forums" class="colstack_item rowlist">
-		{{range .ItemList}}
-		<div data-fid="{{.ID}}" class="rowitem editable_parent panel_forum_item{{if not .Desc}} forum_no_desc{{end}}">
-			<span class="grip"></span>
-			<span id="panel_forums_left_box">
-				{{/** TODO: Make sure the forum_active_name class is set and unset when the activity status of this forum is changed **/}}
-				<a data-field="forum_name" data-type="text" class="editable_block forum_name{{if not .Active}} forum_active_name{{end}}">{{.Name}}</a>
-				<br /><span data-field="forum_desc" data-type="text" class="editable_block forum_desc rowsmall">{{.Desc}}</span>
-			</span>
-			<span class="panel_floater">
-				<span data-field="forum_active" data-type="list" class="panel_tag editable_block forum_active forum_active_{{if .Active}}Show" data-value="1{{else}}Hide" data-value="0{{end}}" title="{{lang "panel.forums_hidden"}}"></span>
-				<span data-field="forum_preset" data-type="list" data-value="{{.Preset}}" class="panel_tag editable_block forum_preset forum_preset_{{.Preset}}" title="{{.PresetLang}}"></span>
-			</span>
-			<span class="panel_buttons">
-				<a class="panel_tag edit_fields hide_on_edit panel_right_button edit_button" title="{{lang "panel.forums_edit_button_tooltip"}}" aria-label="{{lang "panel.forums_edit_button_aria"}}"></a>
-				<a class="panel_right_button has_inner_button show_on_edit" href="/panel/forums/edit/submit/{{.ID}}"><button class='panel_tag submit_edit' type='submit'>{{lang "panel.forums_update_button"}}</button></a>
-				{{if gt .ID 1}}<a href="/panel/forums/delete/{{.ID}}?session={{$.CurrentUser.Session}}" class="panel_tag panel_right_button hide_on_edit delete_button" title="{{lang "panel.forums_delete_button_tooltip"}}" aria-label="{{lang "panel.forums_delete_button_aria"}}"></a>{{end}}
-				<a href="/panel/forums/edit/{{.ID}}" class="panel_tag panel_right_button has_inner_button show_on_edit"><button>{{lang "panel.forums_full_edit_button"}}</button></a>
-			</span>
-		</div>
-		{{end}}
+</div>
+<div id="panel_forums" class="colstack_item rowlist">
+	{{range .ItemList}}
+	<div data-fid="{{.ID}}" class="rowitem editable_parent panel_forum_item{{if not .Desc}} forum_no_desc{{end}}">
+		<span class="grip"></span>
+		<span id="panel_forums_left_box">
+			{{/** TODO: Make sure the forum_active_name class is set and unset when the activity status of this forum is changed **/}}
+			<a data-field="forum_name" data-type="text" class="editable_block forum_name{{if not .Active}} forum_active_name{{end}}">{{.Name}}</a>
+			<br /><span data-field="forum_desc" data-type="text" class="editable_block forum_desc rowsmall">{{.Desc}}</span>
+		</span>
+		<span class="panel_floater">
+			<span data-field="forum_active" data-type="list" class="panel_tag editable_block forum_active forum_active_{{if .Active}}Show" data-value="1{{else}}Hide" data-value="0{{end}}" title="{{lang "panel.forums_hidden"}}"></span>
+			<span data-field="forum_preset" data-type="list" data-value="{{.Preset}}" class="panel_tag editable_block forum_preset forum_preset_{{.Preset}}" title="{{.PresetLang}}"></span>
+		</span>
+		<span class="panel_buttons">
+			<a class="panel_tag edit_fields hide_on_edit panel_right_button edit_button" title="{{lang "panel.forums_edit_button_tooltip"}}" aria-label="{{lang "panel.forums_edit_button_aria"}}"></a>
+			<a class="panel_right_button has_inner_button show_on_edit" href="/panel/forums/edit/submit/{{.ID}}"><button class='panel_tag submit_edit' type='submit'>{{lang "panel.forums_update_button"}}</button></a>
+			{{if gt .ID 1}}<a href="/panel/forums/delete/{{.ID}}?s={{$.CurrentUser.Session}}" class="panel_tag panel_right_button hide_on_edit delete_button" title="{{lang "panel.forums_delete_button_tooltip"}}" aria-label="{{lang "panel.forums_delete_button_aria"}}"></a>{{end}}
+			<a href="/panel/forums/edit/{{.ID}}" class="panel_tag panel_right_button has_inner_button show_on_edit"><button>{{lang "panel.forums_full_edit_button"}}</button></a>
+		</span>
 	</div>
-	<div class="colstack_item rowlist panel_submitrow">
-		<div class="rowitem"><button id="panel_forums_order_button" class="formbutton">{{lang "panel.forums_update_order_button"}}</button></div>
-	</div>
+	{{end}}
+</div>
+<div class="colstack_item rowlist panel_submitrow">
+	<div class="rowitem"><button id="panel_forums_order_button" class="formbutton">{{lang "panel.forums_update_order_button"}}</button></div>
+</div>
 
-	<div class="colstack_item colstack_head">
-		<div class="rowitem"><h1>{{lang "panel.forums_create_head"}}</h1></div>
-	</div>
-	<div class="colstack_item the_form">
-		<form action="/panel/forums/create/?session={{.CurrentUser.Session}}" method="post">
-			<div class="formrow">
-				<div class="formitem formlabel"><a>{{lang "panel.forums_create_name_label"}}</a></div>
-				<div class="formitem"><input name="forum-name" type="text" placeholder="{{lang "panel.forums_create_name"}}" /></div>
-			</div>
-			<div class="formrow">
-				<div class="formitem formlabel"><a>{{lang "panel.forums_create_description_label"}}</a></div>
-				<div class="formitem"><input name="forum-desc" type="text" placeholder="{{lang "panel.forums_create_description"}}" /></div>
-			</div>
-			<div class="formrow">
-				<div class="formitem formlabel"><a>{{lang "panel.forums_active_label"}}</a></div>
-				<div class="formitem"><select name="forum-active">
-					<option selected value="1">{{lang "option_yes"}}</option>
-					<option value="0">{{lang "option_no"}}</option>
-				</select></div>
-			</div>
-			<div class="formrow">
-				<div class="formitem formlabel"><a>{{lang "panel.forums_preset_label"}}</a></div>
-				<div class="formitem"><select name="forum-preset">
-					<option selected value="all">{{lang "panel_preset_everyone"}}</option>
-					<option value="announce">{{lang "panel_preset_announcements"}}</option>
-					<option value="members">{{lang "panel_preset_member_only"}}</option>
-					<option value="staff">{{lang "panel_preset_staff_only"}}</option>
-					<option value="admins">{{lang "panel_preset_admin_only"}}</option>
-					<option value="archive">{{lang "panel_preset_archive"}}</option>
-					<option value="custom">{{lang "panel_preset_custom"}}</option>
-				</select></div>
-			</div>
-			<div class="formrow">
-				<div class="formitem"><button name="panel-button" class="formbutton">{{lang "panel.forums_create_button"}}</button></div>
-			</div>
-		</form>
-	</div>
+<div class="colstack_item colstack_head">
+	<div class="rowitem"><h1>{{lang "panel.forums_create_head"}}</h1></div>
+</div>
+<div class="colstack_item the_form">
+	<form action="/panel/forums/create/?s={{.CurrentUser.Session}}" method="post">
+		<div class="formrow">
+			<div class="formitem formlabel"><a>{{lang "panel.forums_create_name_label"}}</a></div>
+			<div class="formitem"><input name="forum-name" type="text" placeholder="{{lang "panel.forums_create_name"}}" /></div>
+		</div>
+		<div class="formrow">
+			<div class="formitem formlabel"><a>{{lang "panel.forums_create_description_label"}}</a></div>
+			<div class="formitem"><input name="forum-desc" type="text" placeholder="{{lang "panel.forums_create_description"}}" /></div>
+		</div>
+		<div class="formrow">
+		<div class="formitem formlabel"><a>{{lang "panel.forums_active_label"}}</a></div>
+			<div class="formitem"><select name="forum-active">
+				<option selected value="1">{{lang "option_yes"}}</option>
+				<option value="0">{{lang "option_no"}}</option>
+			</select></div>
+		</div>
+		<div class="formrow">
+			<div class="formitem formlabel"><a>{{lang "panel.forums_preset_label"}}</a></div>
+			<div class="formitem"><select name="forum-preset">
+				<option selected value="all">{{lang "panel_preset_everyone"}}</option>
+				<option value="announce">{{lang "panel_preset_announcements"}}</option>
+				<option value="members">{{lang "panel_preset_member_only"}}</option>
+				<option value="staff">{{lang "panel_preset_staff_only"}}</option>
+				<option value="admins">{{lang "panel_preset_admin_only"}}</option>
+				<option value="archive">{{lang "panel_preset_archive"}}</option>
+				<option value="custom">{{lang "panel_preset_custom"}}</option>
+			</select></div>
+		</div>
+		<div class="formrow">
+			<div class="formitem"><button name="panel-button" class="formbutton">{{lang "panel.forums_create_button"}}</button></div>
+		</div>
+	</form>
+</div>
