--- a/templates/account_own_edit_mfa.html
+++ b/templates/account_own_edit_mfa.html
@@ -6,7 +6,7 @@
 			<div class="rowitem"><h1>{{lang "account_mfa_head"}}</h1></div>
 		</div>
 		<div class="colstack_item the_form">
-			<form action="/user/edit/mfa/disable/submit/?session={{.CurrentUser.Session}}" method="post">
+			<form action="/user/edit/mfa/disable/submit/?s={{.CurrentUser.Session}}" method="post">
 				<div class="formrow real_first_child">
 					<div class="formitem formlabel"><a>{{lang "account_mfa_disable_explanation"}}</a></div>
 					<div class="formitem"><button class="formbutton">{{lang "account_mfa_disable_button"}}</button></div>
@@ -17,7 +17,7 @@
 			<div class="rowitem"><h1>{{lang "account_mfa_scratch_head"}}</h1></div>
 		</div>
 		<div class="colstack_item">{{/** TODO: Don't inline this, figure a way of implementing it properly in the template system **/}}
-			<div class="rowitem rowmsg" style="white-space: pre-wrap;">{{lang "account_mfa_scratch_explanation"}}</div>
+			<div class="rowitem rowmsg" style="white-space:pre-wrap;">{{lang "account_mfa_scratch_explanation"}}</div>
 		</div>
 		<div id="panel_mfa_scratches" class="colstack_item rowlist">
 			{{range .Something}}
