--- a/templates/account_own_edit_mfa_setup.html
+++ b/templates/account_own_edit_mfa_setup.html
@@ -6,7 +6,7 @@
 			<div class="rowitem"><h1>{{lang "account_mfa_setup_head"}}</h1></div>
 		</div>
 		<div class="colstack_item the_form">
-			<form action="/user/edit/mfa/setup/submit/?session={{.CurrentUser.Session}}" method="post">
+			<form action="/user/edit/mfa/setup/submit/?s={{.CurrentUser.Session}}" method="post">
 				<input name="code" value="{{.Something}}" type="hidden" />
 				<div class="formrow real_first_child">
 					<div class="formitem formlabel"><a>{{lang "account_mfa_setup_explanation"}}</a></div>
