--- a/templates/panel_forum_edit_perms.html
+++ b/templates/panel_forum_edit_perms.html
@@ -1,23 +1,22 @@
-	<div class="colstack_item colstack_head">
-		<div class="rowitem"><h1>{{.Name}}{{lang "panel_forum_head_suffix"}}</h1></div>
-	</div>
-	<form action="/panel/forums/edit/perms/adv/submit/{{.ForumID}}-{{.GroupID}}?session={{.CurrentUser.Session}}" method="post">
-		<div class="colstack_item rowlist formlist the_form panel_forum_perms">
-			{{range .Perms}}
-			<div class="formrow">
-				<div class="formitem">
-					<a>{{.LangStr}}</a>
-					<div class="to_right">
-						<select name="forum-perm-{{.Name}}">
-							<option{{if .Toggle}} selected{{end}} value=1>{{lang "option_yes"}}</option>
-							<option{{if not .Toggle}} selected{{end}} value=0>{{lang "option_no"}}</option>
-						</select>
-					</div>
+<div class="colstack_item colstack_head">
+	<div class="rowitem"><h1>{{.Name}}{{lang "panel_forum_head_suffix"}}</h1></div>
+</div>
+<form action="/panel/forums/edit/perms/adv/submit/{{.ForumID}}-{{.GroupID}}?s={{.CurrentUser.Session}}" method="post">
+	<div class="colstack_item rowlist formlist the_form panel_forum_perms">
+		{{range .Perms}}
+		<div class="formrow">
+			<div class="formitem">
+				<a>{{.LangStr}}</a>
+				<div class="to_right">
+					<select name="forum-perm-{{.Name}}">
+						<option{{if .Toggle}} selected{{end}} value=1>{{lang "option_yes"}}</option>
+						<option{{if not .Toggle}} selected{{end}} value=0>{{lang "option_no"}}</option>
+					</select>
 				</div>
 			</div>
-			{{end}}
-			<div class="formrow">
-				<div class="formitem"><button name="panel-button" class="formbutton form_middle_button">{{lang "panel_forum_update_button"}}</button></div>
-			</div>
+		</div>{{end}}
+		<div class="formrow">
+			<div class="formitem"><button name="panel-button" class="formbutton form_middle_button">{{lang "panel_forum_update_button"}}</button></div>
 		</div>
-	</form>
+	</div>
+</form>
